--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             referrerpolicy="no-referrer"
         />
         <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/quill/2.0.1/quill.snow.css"
+            integrity="sha512-xPW4rc2igDeYeZHyMMdEiYRu0yU2+kr5dIxMholSoKPKkuwGj9SkVFVwa/itTdCZoGgNO+fMsDtLEa/tbldy2w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
             rel="apple-touch-icon"
             sizes="180x180"
             href="src/assets/favicon.ico"
