--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
+
+  <head>
+      </head
   <head>
     <title>My Website</title>
-  </head>
   <body>
     <h1>Welcome to My Website</h1>
 
