--- a/public/embed-code/index.html
+++ b/public/embed-code/index.html
@@ -21,14 +21,12 @@
 
         // Fetch collection data from Strapi API
         fetch(
-          "http://localhost:1337/api/public-collection?populate%5Bcreator%5D%5Bfields%5D%5B0%5D=id&populate%5Bcreator%5D%5Bfields%5D%5B1%5D=username&populate%5Barticles%5D%5Bfields%5D%5B0%5D=id&populate%5Barticles%5D%5Bfields%5D%5B1%5D=name&populate%5Barticles%5D%5Bfields%5D%5B2%5D=status&populate%5Barticles%5D%5Bfields%5D%5B3%5D=createdAt&populate%5Barticles%5D%5Bfields%5D%5B4%5D=text&populate%5Barticles%5D%5Bfields%5D%5B5%5D=text_id&filters%5Bid%5D=18",
+          "undefined/api/public-collection?populate%5Bcreator%5D%5Bfields%5D%5B0%5D=id&populate%5Bcreator%5D%5Bfields%5D%5B1%5D=username&populate%5Barticles%5D%5Bfields%5D%5B0%5D=id&populate%5Barticles%5D%5Bfields%5D%5B1%5D=name&populate%5Barticles%5D%5Bfields%5D%5B2%5D=status&populate%5Barticles%5D%5Bfields%5D%5B3%5D=createdAt&populate%5Barticles%5D%5Bfields%5D%5B4%5D=text&populate%5Barticles%5D%5Bfields%5D%5B5%5D=text_id&populate%5Barticles%5D%5Bfilters%5D%5Bstatus%5D=Published&filters%5Bid%5D=18",
           {},
         )
           .then((response) => response.json())
           .then((data) => {
-            console.log({ data });
             var collectionContent = data; // Adjust the property name based on your Strapi schema
-            console.log(collectionContent);
             document.getElementById("embedded-collection").innerHTML = `
                <div>
                    <h2>${collectionContent.name}</h2>
@@ -43,9 +41,7 @@
             collectionContent.articles.forEach((article) => {
               document.getElementById("embedded-collection").innerHTML += `
                  <div>
-                 <h1>
-                     <a href="/embed-code/article.html?id=${article.text_id}">${article.name}</a>
-                    </h1>
+                     <a href="/article?id=${article.text_id}">${article.name}</a>
                      <p>${article.text}</p>
                      <p>Date: ${new Date(article.createdAt).toLocaleDateString()}</p>
                      <p><strong>Status:</strong> ${article.status}</p>
